Styled create user/login page on mobile. fixed resize logo fill in jquery

--- a/Codegarden2018Group1/Content/Styles/Components/_Forms.scss
+++ b/Codegarden2018Group1/Content/Styles/Components/_Forms.scss
@@ -38,3 +38,12 @@ textarea {
 label{
     color: white;
 }
+@include phones {
+    input {
+        padding: 8px 0;
+    }
+
+    .form-group {
+        margin: 0;
+    }
+}
