--- a/Codegarden2018Group1/Content/Styles/Layout/_Header.scss
+++ b/Codegarden2018Group1/Content/Styles/Layout/_Header.scss
@@ -263,7 +263,7 @@ header {
             transition: $transition;
 
             &.change {
-                transform: translateY(-140%);
+                transform: translateY(-160%);
 
                 svg {
                     fill: white;
